spacing buttons fixed clear all schedule button added

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -113,6 +113,12 @@ textarea.style {
     outline-color: #55AC3A;
 }
 
+.subtext {
+    font-size: 8px;
+    margin: -16px 0px 10px 0px;
+    text-align: center;
+}
+
 
 /*----- Tab Stuff -----*/
 
